# crunch

./: .gitignore  CMakeLists.txt  LICENSE  README.md  crunch.sln  crunch.vcxproj  crunch.vcxproj.filters  main_real.cpp
crunch/: CMakeLists.txt  GuillotineBinPack.cpp  MaxRectsBinPack.cpp  MaxRectsBinPack.h  Rect.cpp  binary.cpp  binary.hpp  bitmap.cpp  bitmap.hpp  crunch.sln  crunch.vcxproj.filters  hash.cpp  hash.hpp  lodepng.cpp  main.cpp  packer.cpp  packer.hpp  str.cpp  str.hpp  test.cpp  test.hpp  time.cpp  time.hpp  tinydir.h
crunch.xcodeproj/: project.pbxproj
crunch.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
crunch.xcodeproj/xcuserdata/ChevyRay.xcuserdatad/xcschemes/: crunch.xcscheme  xcschememanagement.plist
linux/: Makefile
